<resources>
  <string name="abc_action_bar_up_description">Navigate up</string>
  <string name="abc_action_mode_done">Done</string>
  <string name="abc_capital_off">OFF</string>
  <string name="abc_capital_on">ON</string>
  <string name="abc_menu_alt_shortcut_label">Alt+</string>
  <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
  <string name="abc_menu_delete_shortcut_label">delete</string>
  <string name="abc_menu_enter_shortcut_label">enter</string>
  <string name="abc_menu_function_shortcut_label">Function+</string>
  <string name="abc_menu_meta_shortcut_label">Meta+</string>
  <string name="abc_menu_shift_shortcut_label">Shift+</string>
  <string name="abc_menu_space_shortcut_label">space</string>
  <string name="abc_menu_sym_shortcut_label">Sym+</string>
  <string name="abc_prepend_shortcut_label">Menu+</string>
  <string name="abc_search_hint">Search…</string>
  <string name="abc_searchview_description_clear">Clear query</string>
  <string name="abc_searchview_description_search">Search</string>
  <string name="abc_searchview_description_submit">Submit query</string>
  <string name="abc_searchview_description_voice">Voice search</string>
  <string name="abc_toolbar_collapse_description">Collapse</string>
  <string name="action_settings">Settings</string>
  <string name="adguard_message">To continue using the app, please disable adguard or consider purchasing a subscription</string>
  <string name="adguard_title">Adguard DNS detected</string>
  <string name="androidx_startup">androidx.startup</string>
  <string name="app_name">Cutter - Optimizer</string>
  <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
  <string name="banner_ad_test">ca-app-pub-1060000000000000/0000000000</string>
  <string name="banner_ad_unit_id">ca-app-pub-1060496386140501/2458022870</string>
  <string name="banner_int_unit_id">ca-app-pub-1060496386140501/2264785672</string>
  <string name="best_slow">Best (slow)</string>
  <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
  <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
  <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
  <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
  <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
  <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
  <string name="btn_anadir">Add</string>
  <string name="btn_change_logo">Change logo</string>
  <string name="btn_confirm_logo">Use this logo</string>
  <string name="btn_details">Show details</string>
  <string name="btn_limpiar">Clear</string>
  <string name="btn_optimizar">Optimize</string>
  <string name="btn_premium_not_now">Not now</string>
  <string name="btn_remove_ads">Remove Ads</string>
  <string name="btn_reset_logo">Reset logo</string>
  <string name="btn_retales">Config usable remnants</string>
  <string name="btn_retales_adv">Remnants</string>
  <string name="btn_subscribe">Subscribe me</string>
  <string name="call_notification_answer_action">Answer</string>
  <string name="call_notification_answer_video_action">Video</string>
  <string name="call_notification_decline_action">Decline</string>
  <string name="call_notification_hang_up_action">Hang Up</string>
  <string name="call_notification_incoming_text">Incoming call</string>
  <string name="call_notification_ongoing_text">Ongoing call</string>
  <string name="call_notification_screening_text">Screening an incoming call</string>
  <string name="card_disc_settings">Disc settings</string>
  <string name="card_measure_system">Measurement system</string>
  <string name="card_optimization">Optimization engine</string>
  <string name="card_side_damage">Side damage</string>
  <string name="card_stock">Factory measurements</string>
  <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
  <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
  <string name="character_counter_pattern">%1$d/%2$d</string>
  <string name="check_dialog">Save list of usable remnants</string>
  <string name="check_dialog2">Save cutting settings</string>
  <string name="check_grouped_opt">Show grouped optimization</string>
  <string name="check_two_discs">Machine with two cutting discs</string>
  <string name="clear_text_end_icon_content_description">Clear text</string>
  <string name="combine_and_best">Combine and use the best</string>
  <string name="common_google_play_services_enable_button">Enable</string>
  <string name="common_google_play_services_enable_text">%1$s won't work unless you enable Google Play services.</string>
  <string name="common_google_play_services_enable_title">Enable Google Play services</string>
  <string name="common_google_play_services_install_button">Install</string>
  <string name="common_google_play_services_install_text">%1$s won't run without Google Play services, which are missing from your device.</string>
  <string name="common_google_play_services_install_title">Get Google Play services</string>
  <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
  <string name="common_google_play_services_notification_ticker">Google Play services error</string>
  <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
  <string name="common_google_play_services_unsupported_text">%1$s won't run without Google Play services, which are not supported by your device.</string>
  <string name="common_google_play_services_update_button">Update</string>
  <string name="common_google_play_services_update_text">%1$s won't run unless you update Google Play services.</string>
  <string name="common_google_play_services_update_title">Update Google Play services</string>
  <string name="common_google_play_services_updating_text">%1$s won't run without Google Play services, which are currently updating.</string>
  <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
  <string name="common_open_on_phone">Open on phone</string>
  <string name="common_signin_button_text">Sign in</string>
  <string name="common_signin_button_text_long">Sign in with Google</string>
  <string name="connection_disconnected">Without connection</string>
  <string name="connection_message">To continue using the application you need an internet connection.</string>
  <string name="connection_retry">Retry</string>
  <string name="damage_left">Left</string>
  <string name="damage_right">Right</string>
  <string name="decimal_cm">cm</string>
  <string name="decimal_m">m</string>
  <string name="decimal_mm">mm</string>
  <string name="default_web_client_id">176800575862-9mj4ct7cvmlae57f0c5qg0iltp92f6pm.apps.googleusercontent.com</string>
  <string name="dialog_add_stock_title">New stock measure</string>
  <string name="dialog_add_stock_toast">You have not added any measurements</string>
  <string name="dialog_details_cerrar">Close</string>
  <string name="dialog_details_compartir">Share</string>
  <string name="dialog_details_piezas">Total pieces</string>
  <string name="dialog_details_piezas_errores">Pieces with errors</string>
  <string name="dialog_details_share_extra">Breakdown of materials</string>
  <string name="dialog_details_share_text">Created using Cutter.</string>
  <string name="dialog_details_share_with">Share details using…</string>
  <string name="dialog_details_title">Breakdown of materials</string>
  <string name="dialog_details_totbars">Total bars</string>
  <string name="dialog_edit_measure">Edit measure</string>
  <string name="dialog_measure_edited">Measure successfully edited</string>
  <string name="dialog_saved_list_message_1">This list does not have a configuration.</string>
  <string name="dialog_saved_list_message_2">Configure the initial settings and press OK.</string>
  <string name="dialog_saved_list_title">List loaded</string>
  <string name="disc">Thickness</string>
  <string name="ed_damage_left">Left damages (mm)</string>
  <string name="ed_damage_right">Right damages (mm)</string>
  <string name="ed_disc">Disc (mm)</string>
  <string name="ed_grad">Disk tilt</string>
  <string name="edt_medida">Measure</string>
  <string name="edt_ref">Ref.</string>
  <string name="edt_unidades">Units</string>
  <string name="error_a11y_label">Error: invalid</string>
  <string name="error_icon_content_description">Error</string>
  <string name="error_no_google_play">Error! Couldn't find Google Play on this device.</string>
  <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
  <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
  <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
  <string name="fallback_menu_item_copy_link">Copy link</string>
  <string name="fallback_menu_item_open_in_browser">Open in browser</string>
  <string name="fallback_menu_item_share_link">Share link</string>
  <string name="firebase_database_url">https://cutter-82c50.firebaseio.com</string>
  <string name="gcm_defaultSenderId">176800575862</string>
  <string name="google_api_key">AIzaSyDgU4Oq5hMvAWHaQnWFwh_KmGasRIQj6HE</string>
  <string name="google_app_id">1:176800575862:android:79a4c87861b95f02</string>
  <string name="google_crash_reporting_api_key">AIzaSyDgU4Oq5hMvAWHaQnWFwh_KmGasRIQj6HE</string>
  <string name="google_storage_bucket">cutter-82c50.appspot.com</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
  <string name="icon_content_description">Dialog Icon</string>
  <string name="info_a">Remove measure "</string>
  <string name="info_b">" from the list?</string>
  <string name="info_c">Delete measure</string>
  <string name="info_d">Measure "</string>
  <string name="info_e">" deleted</string>
  <string name="info_f">Undo</string>
  <string name="info_g">Cancel</string>
  <string name="info_h">Cancelled</string>
  <string name="info_i">Incorrect measurement, check.</string>
  <string name="info_import_a">The file must follow these rules:</string>
  <string name="info_import_b">Measurement:Units</string>
  <string name="info_import_c">or also:</string>
  <string name="info_import_d">Measurements:Units:Ref (Ref is optional)</string>
  <string name="info_import_e">Example file:</string>
  <string name="info_import_title">Import measurements</string>
  <string name="info_j">Optimizing, wait…</string>
  <string name="menu_abrir">Open</string>
  <string name="menu_guardar_title">Save project</string>
  <string name="menu_import">Import from txt file</string>
  <string name="menu_manage_subs">Manage subscriptions</string>
  <string name="menu_privacy">Privacy settings</string>
  <string name="menu_privacy_policy">Privacy policy</string>
  <string name="menu_reset">Reset values</string>
  <string name="menu_share">Share</string>
  <string name="menu_slow">Enhanced Mode (Slow)</string>
  <string name="rate_not_now">Not now</string>
  <string name="report_a_problem">Report a problem</string>
  <string name="tv_moreinfo">Remove ads, unlock all features, and enjoy an uninterrupted experience by subscribing to Premium.

The subscription is optional, and you can use the application without it. The subscription renews automatically each month. Subscribe to enjoy additional benefits and cancel anytime.</string>
  <string name="tv_nomoreads">No more Ads!</string>
  <string name="tv_priceinfoa">For only </string>
</resources>