<?xml version='1.0' encoding='utf-8' ?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/noads_layout"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:OptimizaCorte="http://schemas.android.com/apk/res-auto">
  <ImageView android:id="@id/imageView2"
             android:layout_width="190.0dp"
             android:layout_height="70.0dp"
             android:layout_marginTop="16.0dp"
             android:src="@drawable/noads"
             android:layout_marginStart="16.0dp"
             android:layout_marginEnd="16.0dp"
             OptimizaCorte:layout_constraintEnd_toEndOf="parent"
             OptimizaCorte:layout_constraintStart_toStartOf="parent"
             OptimizaCorte:layout_constraintTop_toTopOf="parent" />
  <TextView android:textSize="24.0sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:id="@id/tv_no_more_ads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dp"
            android:text="@string/tv_nomoreads"
            OptimizaCorte:layout_constraintEnd_toEndOf="parent"
            OptimizaCorte:layout_constraintStart_toStartOf="parent"
            OptimizaCorte:layout_constraintTop_toBottomOf="@id/imageView2" />
  <TextView android:textSize="18.0sp"
            android:textColor="#000000"
            android:id="@id/tv_price_info"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dp"
            android:text="@string/tv_priceinfoa"
            android:textAlignment="center"
            android:layout_marginStart="32.0dp"
            android:layout_marginEnd="32.0dp"
            OptimizaCorte:layout_constraintEnd_toEndOf="parent"
            OptimizaCorte:layout_constraintStart_toStartOf="parent"
            OptimizaCorte:layout_constraintTop_toBottomOf="@id/tv_no_more_ads" />
  <TextView android:textSize="11.0sp"
            android:id="@id/tv_more_info"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dp"
            android:text="@string/tv_moreinfo"
            android:layout_marginStart="32.0dp"
            android:layout_marginEnd="32.0dp"
            OptimizaCorte:layout_constraintEnd_toEndOf="parent"
            OptimizaCorte:layout_constraintStart_toStartOf="parent"
            OptimizaCorte:layout_constraintTop_toBottomOf="@id/tv_price_info" />
  <Button android:id="@id/button_subs_ok"
          android:layout_width="fill_parent"
          android:layout_height="36.0dp"
          android:layout_marginLeft="32.0dp"
          android:layout_marginTop="16.0dp"
          android:layout_marginRight="32.0dp"
          android:text="@string/btn_subscribe"
          android:textAllCaps="false"
          OptimizaCorte:layout_constraintEnd_toEndOf="parent"
          OptimizaCorte:layout_constraintStart_toStartOf="parent"
          OptimizaCorte:layout_constraintTop_toBottomOf="@id/tv_more_info"
          style="@style/AppTheme.RoundedCornerMaterialButtonGreen" />
  <Button android:id="@id/button_subs_cancel"
          android:layout_width="fill_parent"
          android:layout_height="36.0dp"
          android:layout_marginLeft="32.0dp"
          android:layout_marginTop="8.0dp"
          android:layout_marginRight="32.0dp"
          android:layout_marginBottom="16.0dp"
          android:text="@string/rate_not_now"
          android:textAllCaps="false"
          OptimizaCorte:layout_constraintBottom_toBottomOf="parent"
          OptimizaCorte:layout_constraintEnd_toEndOf="parent"
          OptimizaCorte:layout_constraintStart_toStartOf="parent"
          OptimizaCorte:layout_constraintTop_toBottomOf="@id/button_subs_ok"
          style="@style/AppTheme.RoundedCornerMaterialButtonRed" />
</androidx.constraintlayout.widget.ConstraintLayout>