<?xml version='1.0' encoding='utf-8' ?>
<RelativeLayout android:id="@id/activity_main"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="4.0" xmlns:android="http://schemas.android.com/apk/res/android">
  <LinearLayout android:orientation="horizontal"
                android:id="@id/layout_input"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:weightSum="15.0"
                android:layout_alignParentTop="true">
    <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_margin="5.0dp"
                          android:hint="@string/edt_medida"
                          android:layout_weight="5.0"
                          android:textAlignment="center">
      <com.google.android.material.textfield.TextInputEditText android:id="@id/edMedida"
                            android:nextFocusDown="@id/edUds"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_margin="5.0dp"
                          android:hint="@string/edt_unidades"
                          android:layout_weight="5.0"
                          android:textAlignment="center">
      <com.google.android.material.textfield.TextInputEditText android:id="@id/edUds"
                            android:nextFocusDown="@id/edRef"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_margin="5.0dp"
                          android:hint="@string/edt_ref"
                          android:layout_weight="5.0"
                          android:textAlignment="center">
      <com.google.android.material.textfield.TextInputEditText android:id="@id/edRef"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:maxLength="8"
                            android:inputType="textNoSuggestions"
                            android:imeOptions="actionDone"
                            android:imeActionId="213"
                            android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>
  </LinearLayout>
  <LinearLayout android:orientation="horizontal"
                android:id="@id/layout_add"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="10.0"
                android:layout_below="@id/layout_input">
    <Button android:id="@id/btn_add"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dp"
            android:layout_marginBottom="5.0dp"
            android:text="@string/btn_anadir"
            style="@style/AppTheme.RoundedCornerMaterialButtonGreen" />
  </LinearLayout>
  <ListView android:id="@id/lv"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/layout_buttons_ads"
            android:layout_below="@id/layout_add"
            android:layout_alignParentStart="true" />
  <LinearLayout android:orientation="vertical"
                android:id="@id/layout_buttons_ads"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">
    <LinearLayout android:orientation="horizontal"
                  android:id="@id/layout_buttons"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="5.0dp"
                  android:layout_marginBottom="10.0dp"
                  android:baselineAligned="false">
      <Button android:id="@id/btn_clear"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/activity_horizontal_margin"
              android:layout_marginRight="5.0dp"
              android:text="@string/btn_limpiar"
              android:layout_weight="1.0"
              style="@style/AppTheme.RoundedCornerMaterialButtonRed" />
      <Button android:id="@id/btn_opt"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="5.0dp"
              android:layout_marginRight="@dimen/activity_horizontal_margin"
              android:text="@string/btn_optimizar"
              android:layout_weight="1.0"
              style="@style/AppTheme.RoundedCornerMaterialButtonGreen" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical"
                  android:id="@id/layout_ads"
                  android:layout_width="fill_parent"
                  android:layout_height="0.0dp"
                  android:layout_weight="1.0">
      <FrameLayout android:id="@id/adaptative_banner3"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content" />
    </LinearLayout>
  </LinearLayout>
</RelativeLayout>